--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,9 +8,7 @@
 @layer base {
   html,
   body {
-    background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(100,43,115,1) 0%, rgba(4,0,4,1) 90%);
-    background-size: cover;
-    background-position: center;
+    @apply bg-gradient-to-r from-black via-gray-800 to-gray-900;
   }
 
   html {
